feat: add game history
